<resources>
    <string name="app_name">Calculadora de IMC</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="calculate">Calcular</string>
    <string name="logo">logo</string>
    <string name="result">Informe seus dados</string>
    <string name="clear">clear</string>
    <string name="validate_wrong_patter">Formato inválido, digite novamente</string>
    <string name="validate_type_weight">Por favor, digite o peso</string>
    <string name="validate_type_height">Por favor, digite a altura</string>
</resources>
